# sdl-cmake-project

./: CMakeLists.txt  README.md
src/: main.cpp
